--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "google-fonts": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
